update about us

--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/about-us.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/about-us.html
@@ -103,8 +103,8 @@
 
 	<div class="container">
 		<ol class="breadcrumb">
-			<li><a href="#">Home</a></li>
-			<li>About us</li>
+			<li><a href="#">TRANG CHỦ</a></li>
+			<li>GIỚI THIỆU</li>
 		</ol><!-- /.breadcrumb -->
 	</div><!-- /.container -->
 
@@ -234,7 +234,7 @@
 							<img src="../assets/dist/img/tranyenthanh.png" alt="Trần Yến Thanh">
 						</figure>
 						<h5>Trần Yến Thanh</h5>
-						<h6>Giám đốc Marketing</h6>
+						<h6>Giám đốc Marketing (CMO)</h6>
 						<p>Chịu trách nhiệm xây dựng thương hiệu và chiến dịch tiếp thị đa kênh nhằm thu hút cả khách
 							hàng lẫn đối tác cung cấp trang phục.</p>
 
@@ -290,7 +290,7 @@
 							<img src="../assets/dist/img/ly.png" alt="Phùng Hương Ly">
 						</figure>
 						<h5>Phùng Hương Ly</h5>
-						<h6>Giám đốc Dịch vụ Khách hàng</h6>
+						<h6>Giám đốc Dịch vụ Khách hàng (CCO)</h6>
 						<p>Chịu trách nhiệm chăm sóc khách hàng, giải đáp thắc mắc và đảm bảo quy trình nhận/trả đồ
 							diễn ra suôn sẻ.</p>
 
