--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/cart.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/cart.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<!-- Mirrored from wpdemo.redq.io/sites/dress-rental/html/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jan 2026 15:16:34 GMT -->
+<html lang="vi">
 
 <head>
 	<meta charset="UTF-8">
@@ -16,18 +14,102 @@
 	<link rel="stylesheet" href="../assets/dist/style/footer.css">
 	<link rel="stylesheet" href="../assets/dist/style/blog.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../assets/dist/style/style.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../assets/dist/style/responsive.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 
+	<!-- Edit modal minimal style (not in original template) -->
+	<style>
+		.edit-modal-overlay {
+			display: none;
+			position: fixed;
+			inset: 0;
+			background: rgba(0, 0, 0, 0.5);
+			z-index: 9999;
+			align-items: center;
+			justify-content: center;
+		}
+
+		.edit-modal-box {
+			background: #fff;
+			border-radius: 4px;
+			padding: 30px;
+			width: 90%;
+			max-width: 450px;
+			margin: auto;
+			position: relative;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+
+		.edit-modal-box h4 {
+			margin-top: 0;
+			font-family: 'Forum', cursive;
+			font-size: 28px;
+			margin-bottom: 20px;
+		}
+
+		.edit-modal-box label {
+			display: block;
+			font-size: 14px;
+			color: #979797;
+			margin-bottom: 5px;
+			margin-top: 15px;
+		}
+
+		.edit-modal-box select,
+		.edit-modal-box input[type="date"] {
+			width: 100%;
+			height: 35px;
+			border-radius: 2px;
+			box-shadow: none;
+			border: 1px solid #E8E8E8;
+			padding: 0 10px;
+			font-size: 14px;
+			outline: 0;
+		}
+
+		.edit-modal-box select:focus,
+		.edit-modal-box input[type="date"]:focus {
+			border-color: #F45858;
+		}
+
+		.edit-modal-actions {
+			margin-top: 25px;
+			display: flex;
+			gap: 10px;
+		}
+
+		.edit-modal-actions button {
+			flex: 1;
+			height: 40px;
+			border: 1px solid #392606;
+			border-radius: 2px;
+			font-size: 16px;
+			cursor: pointer;
+			transition: all 0.3s;
+		}
+
+		.edit-modal-actions .btn-save {
+			background: #392606;
+			color: #F4EDE5;
+			border: 0;
+		}
+
+		.edit-modal-actions .btn-cancel {
+			background: none;
+			color: #392606;
+		}
+
+		.edit-modal-actions .btn-cancel:hover {
+			background: #f0f0f0;
+		}
+	</style>
 </head>
 
 <body>
 
-	<!-- ==========================-->
-	<!-- LOADER-->
-	<!-- ==========================-->
+	<!-- ========================== -->
+	<!-- LOADER -->
+	<!-- ========================== -->
 	<div id="gl-circle-loader-wrapper">
 		<div id="gl-circle-loader-center">
 			<div class="gl-circle-load">
@@ -36,313 +118,173 @@
 		</div>
 	</div>
 
-
-	<!-- ==========================-->
-	<!-- SEARCH MODAL-->
-	<!-- ==========================-->
-
-
-
-
+	<!-- ========================== -->
+	<!-- HEADER -->
+	<!-- ========================== -->
 	<div id="header-placeholder"></div>
-
 	<script>
 		fetch('header.html')
 			.then(response => {
-				if (!response.ok) {
-					throw new Error('Network response was not ok');
-				}
+				if (!response.ok) throw new Error('Network response was not ok');
 				return response.text();
 			})
 			.then(data => {
 				document.getElementById('header-placeholder').innerHTML = data;
 				if (typeof renderAuthHeader === "function") renderAuthHeader();
 			})
-			.catch(error => {
-				console.error('Lỗi khi tải header:', error);
-			});
+			.catch(error => console.error('Lỗi khi tải header:', error));
 	</script>
 
-
-
+	<!-- BREADCRUMB -->
 	<div class="container">
 		<ol class="breadcrumb underline">
 			<li><a href="index.html">Trang chủ</a></li>
 			<li>Giỏ hàng</li>
-		</ol><!-- /.breadcrumb -->
-	</div><!-- /.container -->
+		</ol>
+	</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	<!-- CART STEP IMAGE -->
 	<div class="cart-setp">
 		<div class="container">
 			<figure><img src="../assets/dist/img/cart/Designer.png" class="img-responsive" alt="" /></figure>
 		</div>
-	</div><!-- /.cart-setp -->
+	</div>
 
-
-
+	<!-- ========================== -->
+	<!-- SHOPPING DETAILS -->
+	<!-- ========================== -->
 	<div class="shopping-details base-padd">
 		<div class="container">
 			<div class="row">
+
+				<!-- ====== LEFT COLUMN ====== -->
 				<div class="col-sm-8">
 					<div class="shopping-bag">
-						<h4 class="one">Giỏ hàng của bạn</h4>
-						<div class="diva short-dress">
-							<img src="../assets/dist/img/cart/1.jpg" alt="1" />
-							<h5 class="font-30-for-reg-0">Váy Dạ Hội Diva Ngắn</h5>
-							<p class="color">Thương hiệu : <span>Blue Flamingo</span></p>
-							<p>Mã SP : <span>1834A</span></p>
-							<p>Giá : <span>$50</span></p>
-							<p>Size : <span>L</span></p>
-							<p>Màu : <span>Hồng Ngọt Ngào</span></p>
-							<p>Ngày nhận : <span>25/02/2017</span></p>
-							<p>Ngày trả : <span>19/02/2017</span></p>
-							<p>Thời gian thuê : <span>4 ngày</span></p>
-							<button><i class="ion-edit"></i> Chỉnh sửa</button>
-						</div><a href="#" class="btn continue">Tiếp tục mua sắm</a>
-						<a href="#" class="btn update">Cập nhật giỏ hàng</a>
 
+						<!-- Section 1: Giỏ hàng -->
+						<h4 class="one">Giỏ hàng của bạn</h4>
+
+						<!-- Dynamic cart items rendered here by cart.js -->
+						<div id="cart-items-container">
+							<!-- JS will render .diva.short-dress cards here -->
+							<p style="text-align:center; padding: 30px 0; color: #979797;">Đang tải giỏ hàng...</p>
+						</div>
+
+						<!-- Continue & Update buttons -->
+						<a href="listing-page.html" class="btn continue">Tiếp tục mua sắm</a>
+						<a href="#" class="btn update" id="btn-update-cart">Cập nhật giỏ hàng</a>
+
+						<!-- Section 2: Địa chỉ giao hàng -->
 						<h4 class="two">Địa chỉ giao hàng</h4>
 						<div class="diva delivery-address">
-							<form class="form-horizontal">
+							<form class="form-horizontal" id="delivery-form" onsubmit="return false;">
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>Họ & Tên đệm</p>
-											<input type="text" class="form-control" />
+											<p>Họ và tên <span style="color: #F45858;">*</span></p>
+											<input type="text" class="form-control" id="delivery-name"
+												placeholder="Nguyễn Văn A" />
 										</div>
 									</div>
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>Tên</p>
-											<input type="text" class="form-control" />
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="inner-form">
-											<p>Địa chỉ Email</p>
-											<input type="email" class="form-control" />
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="inner-form">
-											<p>Số điện thoại</p>
-											<input type="text" class="form-control" />
+											<p>Số điện thoại <span style="color: #F45858;">*</span></p>
+											<input type="tel" class="form-control" id="delivery-phone"
+												placeholder="0901 234 567" />
 										</div>
 									</div>
 									<div class="col-sm-12">
 										<div class="inner-form">
-											<p>Địa chỉ nhận hàng</p>
-											<input type="text" class="form-control" />
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="inner-form">
-											<p>Mã bưu chính (Zip Code)</p>
-											<input type="text" class="form-control" />
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="inner-form">
-											<p>Thành phố</p>
-											<input type="text" class="form-control" />
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="inner-form">
-											<p>Quốc gia</p>
-											<input type="text" class="form-control" />
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="inner-form">
-											<p>Tỉnh / Thành</p>
-											<input type="text" class="form-control" />
+											<p>Địa chỉ nhận hàng <span style="color: #F45858;">*</span></p>
+											<input type="text" class="form-control" id="delivery-address"
+												placeholder="Số nhà, đường, phường/xã, quận/huyện, tỉnh/thành phố" />
 										</div>
 									</div>
 								</div>
 							</form>
 						</div>
-						<h4 class="three">Phương thức thanh toán</h4>
+
+						<!-- Payment method (placeholder) -->
 						<div class="diva delivery-address payment-method">
-							<h4 class="font-30-for-reg-0">Chọn phương thức thanh toán</h4>
-							<form class="form-horizontal">
-								<div class="row">
-									<div class="col-sm-6">
-										<div class="inner-form">
-											<p>Thanh toán qua thẻ tín dụng</p>
-											<input type="text" class="form-control" placeholder="Số thẻ..." />
-										</div>
-									</div>
-									<div class="col-sm-12">
-										<div class="inner-form">
-											<p>Ghi chú thêm</p>
-											<textarea rows="6"></textarea>
-										</div>
-									</div>
-								</div>
-							</form>
-						</div><button type="submit" class="btn btn-blog">Tiến hành đặt hàng</button>
+						</div>
+
+						<!-- Submit buttons -->
+						<button type="button" class="btn btn-blog" id="btn-place-order">
+							<i class="fa fa-check-circle"></i> Đặt hàng
+						</button>
+
 					</div>
 				</div>
+
+				<!-- ====== RIGHT COLUMN ====== -->
 				<div class="col-sm-4">
 					<div class="fixedElement">
-						<div class="discount ">
+						<div class="discount">
+							<!-- Voucher input -->
 							<div class="flex discount1">
-								<input type="text" placeholder="Mã giảm giá" />
-								<button>Áp dụng</button>
+								<input type="text" id="voucher-input" placeholder="Mã giảm giá" />
+								<button id="btn-apply-voucher">Áp dụng</button>
 							</div>
+							<!-- Subtotal -->
 							<div class="flex">
 								<p>Tạm tính :</p>
-								<span>$50</span>
+								<span id="price-subtotal">0 ₫</span>
 							</div>
+							<!-- Discount -->
 							<div class="flex">
 								<p class="color">Khuyến mãi :</p>
-								<span class="color">-$0.0</span>
+								<span class="color" id="price-discount">-0 ₫</span>
 							</div>
-							<div class="flex bar">
-								<p>Phí vận chuyển :</p>
-								<span>-$0.0</span>
-							</div>
+							<!-- Total -->
 							<div class="flex ">
 								<h4>TỔNG CỘNG :</h4>
-								<h4>$50</h4>
+								<h4 id="price-total">0 ₫</h4>
 							</div>
-						</div><button type="submit" class="btn btn-blog">Tiến hành đặt hàng</button>
+						</div>
+						<button type="button" class="btn btn-blog" id="btn-sidebar-order">Tiến hành đặt hàng</button>
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</div>
 
+	<!-- ========================== -->
+	<!-- EDIT MODAL -->
+	<!-- ========================== -->
+	<div class="edit-modal-overlay" id="edit-modal">
+		<div class="edit-modal-box">
+			<h4><i class="ion-edit"></i> Chỉnh sửa</h4>
+			<label>Màu sắc</label>
+			<select id="edit-color"></select>
+			<label>Kích thước</label>
+			<select id="edit-size"></select>
+			<label>Ngày nhận</label>
+			<input type="date" id="edit-start-date" />
+			<label>Ngày trả</label>
+			<input type="date" id="edit-end-date" />
+			<div class="edit-modal-actions">
+				<button class="btn-cancel" id="edit-modal-close" onclick="closeEditModal()">Hủy</button>
+				<button class="btn-save" id="edit-modal-save">Lưu thay đổi</button>
+			</div>
+		</div>
+	</div>
 
-
-
-
-
-
-
-
-
-
-
+	<!-- FOOTER -->
 	<div id="footer-placeholder"></div>
 	<script>
 		fetch('footer.html')
 			.then(response => {
-				if (!response.ok) {
-					throw new Error('Network response was not ok');
-				}
+				if (!response.ok) throw new Error('Network response was not ok');
 				return response.text();
 			})
 			.then(data => {
 				document.getElementById('footer-placeholder').innerHTML = data;
 			})
-			.catch(error => {
-				console.error('Lỗi khi tải header:', error);
-			});
+			.catch(error => console.error('Lỗi khi tải footer:', error));
 	</script>
 
-
-
-
-
-
+	<!-- VENDOR SCRIPTS -->
 	<script src="../assets/dist/js/vendor/jquery-3.2.0.min.js"></script>
 	<script src="../assets/dist/js/vendor/bootstrap.min.js"></script>
 	<script src="../assets/dist/js/vendor/countUp.js"></script>
@@ -356,9 +298,10 @@
 	<script src="../assets/dist/js/vendor/jquery.smooth-scroll.js"></script>
 	<script src="../assets/dist/js/custom.js"></script>
 	<script src="../assets/dist/js/auth-header.js"></script>
-	<script src="../assets/dist/js/layout.js"></script>
-</body>
 
-<!-- Mirrored from wpdemo.redq.io/sites/dress-rental/html/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jan 2026 15:16:34 GMT -->
+	<!-- CART SCRIPTS -->
+	<script src="../assets/dist/js/api.js"></script>
+	<script src="../assets/dist/js/cart.js"></script>
+</body>
 
 </html>
