--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html
@@ -21,99 +21,87 @@
 
 
   <style>
-    /* auth layout gọn gàng */
-    .auth-wrap {
-      min-height: 60vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 50px 16px;
-    }
+    :root{--card:#fff;--accent:#ff5a7a;--muted:#6b7280}
+    *{box-sizing:border-box}
+    body{font-family: 'Open Sans', Roboto, Arial, sans-serif;background:linear-gradient(180deg,#fffaf6,#fff);margin:0}
+    .auth-wrap{min-height:70vh;display:flex;align-items:center;justify-content:center;padding:40px 16px}
 
-    .auth-card {
-      width: 420px;
-      max-width: 100%;
-      background: #fff;
-      border: 1px solid #eee;
-      border-radius: 14px;
-      padding: 22px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, .08);
-    }
+    .auth-card{width:420px;max-width:100%;background:var(--card);border-radius:14px;padding:26px;border:1px solid #f0f0f2;box-shadow:0 12px 30px rgba(16,24,40,0.06)}
 
-    .auth-switch {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 14px;
-    }
+    /* decorative images */
+    .decor-img{position:absolute;pointer-events:none;opacity:.95}
+    .decor-1{left:6%;top:18%;width:160px;transform:translateZ(0);animation:floatY 6s ease-in-out infinite}
+    .decor-2{right:6%;bottom:14%;width:120px;transform:translateZ(0);animation:floatY 8s ease-in-out infinite reverse}
 
-    .auth-switch a {
-      flex: 1;
-      text-align: center;
-      padding: 10px 12px;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      text-decoration: none;
-      color: #333;
-    }
+    .auth-switch{display:flex;gap:8px;margin-bottom:16px}
+    .auth-switch a{flex:1;text-align:center;padding:10px 12px;border-radius:10px;text-decoration:none;color:#374151;border:1px solid transparent;background:transparent;font-weight:600}
+    .auth-switch a.active{background:linear-gradient(90deg,#fff0f2,#fff5f7);border-color:rgba(255,90,122,0.12);color:var(--accent)}
 
-    .auth-switch a.active {
-      border-color: #333;
-      font-weight: 600;
-    }
+    h3{margin:0 0 8px;font-size:20px;color:#111827}
+    .subtitle{color:var(--muted);margin-bottom:14px}
 
-    .auth-form {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
+    .auth-form{display:flex;flex-direction:column;gap:12px}
+    .auth-form input{padding:12px 14px;border-radius:10px;border:1px solid #e6e9ef;font-size:15px}
+    .auth-form button{padding:12px;border-radius:10px;border:0;background:linear-gradient(90deg,var(--accent),#ff7b95);color:#fff;font-weight:700;cursor:pointer}
 
-    .auth-form input {
-      padding: 12px;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      outline: none;
-    }
+    .auth-footer{display:flex;justify-content:space-between;align-items:center;margin-top:8px}
+    .auth-footer a{color:var(--accent);text-decoration:none;font-weight:600}
 
-    .auth-form button {
-      padding: 12px;
-      border: 0;
-      border-radius: 10px;
-      cursor: pointer;
-    }
+    .divider{display:flex;align-items:center;gap:12px;margin:14px 0;color:var(--muted);font-size:13px}
+    .divider:before,.divider:after{content:'';flex:1;height:1px;background:#f3f4f6}
 
-    .auth-msg {
-      margin: 6px 0 0;
-      font-size: 14px;
-    }
+    .socials{display:flex;gap:8px}
+    .social{flex:1;padding:10px;border-radius:8px;text-align:center;font-weight:600;border:1px solid #e6e9ef;background:#fff;cursor:pointer}
+
+    .auth-msg{color:#dc2626;font-size:13px;margin-top:6px}
+
+    @media(max-width:520px){.auth-card{padding:18px;width:100%}}
+    @keyframes floatY{0%{transform:translateY(0)}50%{transform:translateY(-10px)}100%{transform:translateY(0)}}
+    @keyframes fadeInUp{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:none}}
+    .auth-card{animation:fadeInUp .6s ease both}
+    .social{transition:transform .18s ease,box-shadow .18s ease}
+    .social:hover{transform:translateY(-4px);box-shadow:0 8px 20px rgba(16,24,40,0.08)}
   </style>
 </head>
 
 <body>
   <div id="app-header"></div>
 
-  <main class="auth-wrap">
-    <div class="auth-card">
+  <main class="auth-wrap" style="position:relative;">
+    <!-- <img src="../assets/dist/img/content/1.jpg" alt="decor" class="decor-img decor-1">
+    <img src="../assets/dist/img/community/2.jpg" alt="decor" class="decor-img decor-2"> -->
+
+    <div class="auth-card" role="form" aria-labelledby="loginTitle">
       <div class="auth-switch">
         <a class="active" href="login.html">Đăng nhập</a>
         <a href="register.html">Đăng ký</a>
       </div>
 
-      <h3 style="margin: 0 0 12px;">Đăng nhập</h3>
+      <h3 id="loginTitle">Đăng nhập</h3>
+      <div class="subtitle">Đăng nhập bằng email của bạn để tiếp tục</div>
 
-      <form id="loginForm" class="auth-form">
-        <input name="email" type="email" placeholder="Email" required />
-        <input name="password" type="password" placeholder="Mật khẩu" required />
+      <form id="loginForm" class="auth-form" action="#" method="post">
+        <input name="email" type="email" placeholder="Email" required aria-label="Email" />
+        <input name="password" type="password" placeholder="Mật khẩu" required aria-label="Mật khẩu" />
+
+       
+
         <button type="submit">Đăng nhập</button>
         <div id="loginMsg" class="auth-msg"></div>
+
       </form>
     </div>
   </main>
 
   <div id="app-footer"> </div>
 
+  <!-- Toast container for top-right notifications -->
+  <div id="toastContainer" aria-live="polite" aria-atomic="true" style="position:fixed;top:18px;right:18px;z-index:99999;display:flex;flex-direction:column;gap:8px;pointer-events:none"></div>
+
   <script src="../assets/dist/js/auth-header.js"></script>
   <script src="../assets/dist/js/layout-auth.js"></script>
   <script src="../assets/dist/js/auth-page.js"></script>
+  
 </body>
 
 </html>
