--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/cart.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/cart.html
@@ -144,11 +144,11 @@
 	</div>
 
 	<!-- CART STEP IMAGE -->
-	<div class="cart-setp">
+	<!-- <div class="cart-setp">
 		<div class="container">
 			<figure><img src="../assets/dist/img/cart/Designer.png" class="img-responsive" alt="" /></figure>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- ========================== -->
 	<!-- SHOPPING DETAILS -->
