--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
@@ -53,13 +53,14 @@
                         <p>Hà Nội, Việt Nam</p>
                     </li> -->
                     <li class="phone">
-                        <p>+84 987 654 321</p>
+                        <p>036 327 4012</p>
                     </li>
                     <li class="mobile">
-                        <p>+84 243 000 111</p>
+                        <p>Fanpage: Dressy - Xúng Xính</p>
                     </li>
                     <li class="envelope">
-                        <p>support@dressrental.com</p>
+                        <p>
+dressyteamcontact@gmail.com</p>
                     </li>
                 </ul>
             </div>
